@@ -20,7 +20,7 @@
  * This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
  * KIND, either express or implied.
  *
- * $Id: urldata.h,v 1.156 2003-06-10 12:22:25 bagder Exp $
+ * $Id: urldata.h,v 1.157 2003-06-10 12:49:20 bagder Exp $
  ***************************************************************************/
 
 /* This file is for lib internal stuff */
@@ -689,9 +689,7 @@ struct UserDefined {
   long use_port;     /* which port to use (when not using default) */
   char *userpwd;     /* <user:password>, if used */
   bool httpdigest;   /* if HTTP Digest is enabled */
-#ifdef GSSAPI
   bool httpnegotiate; /* if HTTP Negotiate authentication is enabled */
-#endif
   char *set_range;   /* range, if used. See README for detailed specification
                         on this syntax. */
   long followlocation; /* as in HTTP Location: */
